disable attachment-fixed on small screens

--- a/sass/_home-page.scss
+++ b/sass/_home-page.scss
@@ -5,7 +5,7 @@
 	position: relative;
 	overflow: hidden;
 	z-index: 5;
-	background: linear-gradient(90deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4)) 100%, url('../img/hero/hero-bg.jpg') center / auto 100% no-repeat;
+	background: linear-gradient(90deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4)) 100%, url('../img/hero/hero-bg.jpg') center / cover no-repeat;
 	background-attachment: fixed;
 	height: 100vh;
 	height: 100svh;
